--- a/render.yaml
+++ b/render.yaml
@@ -4,11 +4,18 @@ services:
     runtime: node
     repo: https://github.com/m-khalil26/Render3
     region: frankfurt 
-    buildcommand : npm build
-    startcommand: npm start
+    buildC ommand : npm build
+    startCommand: npm start
     plan: free 
     branch: master 
     rootDir: render3
+    envVars:
+      -key: DATABASE_URL
+      fromDatabase:
+        name: my_db2
+        property: connectionString
+    
+
 
 databases:
   - name: my_db2
